--- a/views/ref/contenido/derecho/editar.twig
+++ b/views/ref/contenido/derecho/editar.twig
@@ -19,7 +19,7 @@
                 <div class="form-group">
                     <label class="control-label" for="inputLarge">Descripcion en Home</label>
                     <span class="help-block">Sin formato. Esta descripción aparece en la página donde se listan los ejes.</span>
-                    <textarea class="form-control" rows="3" id="textArea">{{derecho.descripcionHome}}</textarea>
+                    <textarea class="form-control" rows="3" name="descripcionHome" id="textArea">{{derecho.descripcionHome}}</textarea>
                 </div>
                 <hr>
                 <div class="form-group">
