--- a/public/assets-ref/scss/virtuagora-ref-side.scss
+++ b/public/assets-ref/scss/virtuagora-ref-side.scss
@@ -1,154 +1,168 @@
  @import "./bootstrap";
-@import "../css/font-awesome.css";
-@import url('https://fonts.googleapis.com/css?family=Open+Sans|Raleway:300,400,600,700,900');
- 
-html,
-body {
-  font: 13px/20px 'Open Sans', Arial, Helvetica, sans-serif;
-  line-height: 1.3;
-}
-
+ @import "../css/font-awesome.css";
+ @import url('https://fonts.googleapis.com/css?family=Montserrat:200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i');
+ @import "./variables";
+ html,
  body {
-    overflow-x: hidden;
+     font: 13px/20px 'Montserrat', Arial, Helvetica, sans-serif;
+     line-height: 1.3;
  }
 
-/* Toggle Styles */
+ body {
+     overflow-x: hidden;
+ }
 
-#wrapper {
-    padding-left: 0;
-    -webkit-transition: all 0.5s ease;
-    -moz-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
-    transition: all 0.5s ease;
-}
+ /* Toggle Styles */
 
-#wrapper.toggled {
-    padding-left: 250px;
-}
+ #wrapper {
+     padding-left: 0;
+     -webkit-transition: all 0.5s ease;
+     -moz-transition: all 0.5s ease;
+     -o-transition: all 0.5s ease;
+     transition: all 0.5s ease;
+ }
 
-#sidebar-wrapper {
-    z-index: 1000;
-    position: fixed;
-    left: 250px;
-    width: 0;
-    height: 100%;
-    margin-left: -250px;
-    overflow-y: auto;
-    background: #0075c2;
-    -webkit-transition: all 0.5s ease;
-    -moz-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
-    transition: all 0.5s ease;
-}
+ #wrapper.toggled {
+     padding-left: 250px;
+ }
 
-#wrapper.toggled #sidebar-wrapper {
-    width: 250px;
-}
+ #sidebar-wrapper {
+     z-index: 1000;
+     position: fixed;
+     left: 250px;
+     width: 0;
+     height: 100%;
+     margin-left: -250px;
+     overflow-y: auto;
+     background: $refAzul;
+     -webkit-transition: all 0.5s ease;
+     -moz-transition: all 0.5s ease;
+     -o-transition: all 0.5s ease;
+     transition: all 0.5s ease;
+ }
 
-#page-content-wrapper {
-    width: 100%;
-    position: absolute;
-    padding: 15px;
-}
+ #wrapper.toggled #sidebar-wrapper {
+     width: 250px;
+ }
 
-#wrapper.toggled #page-content-wrapper {
-    position: absolute;
-    margin-right: -250px;
-}
+ #page-content-wrapper {
+     width: 100%;
+     position: absolute;
+     padding: 15px;
+ }
 
-/* Sidebar Styles */
+ #wrapper.toggled #page-content-wrapper {
+     position: absolute;
+     margin-right: -250px;
+ }
 
-.sidebar-nav {
-    position: absolute;
-    top: 0;
-    width: 250px;
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
+ /* Sidebar Styles */
 
-.sidebar-nav li {
-    text-indent: 20px;
-    line-height: 40px;
-}
+ .sidebar-nav {
+     position: absolute;
+     top: 0;
+     width: 250px;
+     margin: 0;
+     padding: 0;
+     list-style: none;
+ }
 
-.sidebar-nav li a {
-    display: block;
-    text-decoration: none;
-    color: #FFF;
-}
+ .sidebar-nav li {
+     text-indent: 20px;
+     line-height: 40px;
+ }
 
-.sidebar-nav li a:hover {
-    text-decoration: none;
-    color: #fff;
-    background: rgba(255,255,255,0.2);
-}
+ .sidebar-nav li a {
+     display: block;
+     text-decoration: none;
+     color: #FFF;
+ }
 
-.sidebar-nav li a:active,
-.sidebar-nav li a:focus {
-    text-decoration: none;
-}
+ .sidebar-nav li a:hover {
+     text-decoration: none;
+     color: #fff;
+     background: rgba(255, 255, 255, 0.2);
+ }
 
-.sidebar-nav > .sidebar-brand {
-    height: 65px;
-    font-size: 18px;
-    line-height: 60px;
-}
+ .sidebar-nav li a:active,
+ .sidebar-nav li a:focus {
+     text-decoration: none;
+ }
 
-.sidebar-nav > .sidebar-brand a {
-    color: #999999;
-}
+ .sidebar-nav>.sidebar-brand {
+     height: 65px;
+     font-size: 18px;
+     line-height: 60px;
+ }
 
-.sidebar-nav > .sidebar-brand a:hover {
-    color: #fff;
-    background: none;
-}
+ .sidebar-nav>.sidebar-brand a {
+     color: #999999;
+ }
 
-@media(min-width:768px) {
-    #wrapper {
-        padding-left: 250px;
-    }
+ .sidebar-nav>.sidebar-brand a:hover {
+     color: #fff;
+     background: none;
+ }
 
-    #wrapper.toggled {
-        padding-left: 0;
-    }
+ @media(min-width:768px) {
+     #wrapper {
+         padding-left: 250px;
+     }
+     #wrapper.toggled {
+         padding-left: 0;
+     }
+     #sidebar-wrapper {
+         width: 250px;
+     }
+     #wrapper.toggled #sidebar-wrapper {
+         width: 0;
+     }
+     #page-content-wrapper {
+         padding: 20px;
+         position: relative;
+     }
+     #wrapper.toggled #page-content-wrapper {
+         position: relative;
+         margin-right: 0;
+     }
+ } // #body-editor{
+ //     font: 16px/20px 'Open Sans', Arial, Helvetica, sans-serif;
+ //     line-height: 1.3;
+ // }
+ .lista-acciones {
+     .accion-container {
+         padding: 5px 10px;
+         textarea {
+             padding: 0;
+             border: 0;
+             box-shadow: none;
+         }
+     }
+ }
 
-    #sidebar-wrapper {
-        width: 250px;
-    }
+ .twitter-typeahead {
+     width: 100%;
+     vertical-align: middle;
+ }
 
-    #wrapper.toggled #sidebar-wrapper {
-        width: 0;
-    }
+ .ui-datepicker .ui-datepicker-title select {
+     color: #000;
+ }
 
-    #page-content-wrapper {
-        padding: 20px;
-        position: relative;
-    }
-
-    #wrapper.toggled #page-content-wrapper {
-        position: relative;
-        margin-right: 0;
-    }
-}
-
-// #body-editor{
-//     font: 16px/20px 'Open Sans', Arial, Helvetica, sans-serif;
-//     line-height: 1.3;
-// }
-
-.lista-acciones{
-    .accion-container{
-        padding: 5px 10px;
-        textarea{padding:0;border:0;box-shadow:none;}
-    }
-}
-
-.twitter-typeahead{
-    width: 100%;
-    vertical-align: middle;
-}
-
-.ui-datepicker .ui-datepicker-title select{
-  color: #000;
-}
+ .form-control {
+     border: 0;
+     border-bottom-width: 0px;
+     border-bottom-style: none;
+     border-bottom-color: currentcolor;
+     border-radius: 0;
+     padding-left: 3px;
+     padding-right: 3px;
+     color: #333;
+     font-weight: 600;
+     box-shadow: none;
+     border-bottom: 2px solid #333;
+     &:focus {
+         box-shadow: none;
+         border-bottom: 3px solid $refCyan;
+     }
+ }
