--- a/views/ref/portal/inicio.twig
+++ b/views/ref/portal/inicio.twig
@@ -1,75 +1,120 @@
-{% extends "ref/master.twig" %} {# ----------------------------------------------------------- #} {% block titulo %}Inicio{%endblock
-%} {% block body %}
-<header class="titulo">
-	<div class="container">
-		<div class="row text-right">
-			<h1 class="blanco bold">La Constitución de Santa Fe</h1>
-		</div>
-	</div>
-				<img src="{{ baseUrl() }}/assets-ref/img/encabezado-fondo-transp.png" class="medios img-responsive">  
-</header>
-<div class="introParticipacion">
-	<div class="container">
-		<div class="row">
-			<div class="col-xs-12 col-sm-7">
-				<h1 class="gris black grande">Plataforma digital de participación</h1>
-				<p>Todas las voces y todas las miradas serán escuchadas en este proceso -inédito en la provincia y en el país-, de modo
-					que la futura convención reformadora tenga la mayor legitimidad social posible.</p>
-				{% if user is not empty %}
-				<h3 class="bold"><img src="{{ avatarUrl(user.img_tipo, user.img_hash, 32) }}" class="img-thumbnail" style="margin-right:10px;">{{ user.nombre
-					}} {{ user.apellido }}</h3>
-				{% endif %}
-				<p>Te invitamos a dejar tus opiniones en los 8 ejes principales a contemplarse en el proceso de reforma:</p>
-				{% if user is empty %}
-				<div class="btn-group btn-group-justified btn-group-lg hidden-xs hidden-sm">
-					<a href="{{urlFor('shwLogin')}}" class="btn btn-red"><i class="fa fa-sign-in fa-fw"></i>Iniciar Sesión</a>
-					<a href="{{urlFor('shwCrearUsuario')}}" class="btn btn-default"><i class="fa fa-plus fa-fw"></i>Registrarse</a>
-				</div>
-				<div class="btn-group btn-group-vertical btn-group-lg hidden-md hidden-lg" style="width:100%">
-					<a href="{{urlFor('shwLogin')}}" class="btn btn-red"><i class="fa fa-sign-in fa-fw"></i>Iniciar Sesión</a>
-					<a href="{{urlFor('shwCrearUsuario')}}" class="btn btn-default"><i class="fa fa-plus fa-fw"></i>Registrarse</a>
-				</div>
-				{% endif %}
-			</div>
-			<div class="col-xs-12 col-sm-5">
-				<img src="{{ baseUrl() }}/assets-ref/img/manos-fondo-transp.png" class="img-responsive" style="margin: auto; max-height:320px;" alt="">
-			</div>
-		</div>
-	</div>
-</div>
-<div class="listadoEjes">
-	{% for eje in ejes %}
-	<div class="ejeIntro eje{{eje.orden}}">
-		<div class="container">
-			<div class="row">
-				<div class="parent">
-					<div class="col-xs-12 col-md-5 child">
-						<h1 class="grande black blanco" style="margin:0;"><span style="color:#c40202">0{{eje.orden}}</span><br>{{eje.titulo}}</h1>
-					</div>
-					<div class="col-xs-12 col-md-5 child">
-						<p>{{eje.descripcion}}</p>
-					</div>
-					<div class="col-xs-12 col-md-2 child"><a href="{{urlFor('shwDerecho', {'idDer':eje.id})}}" class="btn btn-large btn-participar">PARTICIPAR</a></div>
-				</div>
-			</div>
-		</div>
-	</div>
-	{% endfor %}
-</div>
-{% endblock body %} {# -------------------------------------------- #} {% block scripts %}
-<script>
-    $(function() {
-  $('a[href="#derechos"]').click(function() {
-    if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
-      var target = $(this.hash);
-      target = target.length ? target : $('[name=' + this.hash.slice(1) +']');
-      if (target.length) {
-        $('html, body').animate({
-          scrollTop: target.offset().top
-        }, 1000);
-        return false;
-      }
-    }
-  });
-});
-</script> {% endblock scripts %}
+{% extends "ref/master.twig" %}
+{# ----------------------------------------------------------- #}
+{% block titulo %}Inicio{%endblock
+%}
+{% block body %}
+  <header class="titulo">
+    <div style="position: relative;overflow: hidden; height: 100%;">
+      <img src="{{ baseUrl() }}/assets-ref/img/banner-index.png" class="visible-md-block visible-lg-block medios img-responsive center-block" style="max-width: 750px;">
+      <img src="{{ baseUrl() }}/assets-ref/img/bg1pattern-b-alt.svg" class="visible-md-block visible-lg-block pattern-top-index-responsive" style="">
+      <img src="{{ baseUrl() }}/assets-ref/img/banner-mobile.png" class="visible-xs-block visible-sm-block img-responsive" style="">
+      <div class="text-center">
+        <h3 class="semibold">Conocé los ejes de trabajo</h3>
+      </div>
+    </div>
+  </header>
+  <div id="the-great-index">
+    <div class="container">
+      <div class="row">
+        {% for eje in ejes %}
+          {% if loop.index in [1, 4, 7] %}
+            <div class="col-xs-12 col-md-4">
+            {% endif %}
+            <div class="content-description-index">
+              <a href="{{urlFor('shwDerecho', {'idDer':eje.id})}}" class="color-title{{loop.index}}">
+                <h1 class="grande black" style="margin:0;">
+                  {{eje.titulo}}</h1>
+              </a>
+              <p>{{eje.descripcion}}</p>
+              <a href="{{urlFor('shwDerecho', {'idDer':eje.id})}}" class="propone-link-anchor">
+                <i class="fa fa-minus"></i>
+                Proponé</a>
+            </div>
+              <br>
+              <br>
+              <br>
+            {% if loop.index in [1,2,4,5,7]%}
+            {% endif %}
+            {% if loop.index in [3, 6, 8] %}
+            </div>
+          {% endif %}
+
+        {% endfor %}
+      </div>
+    </div>
+  </div>
+  <div class="introParticipacion" style="display:none">
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12 col-sm-7">
+          <h1 class="gris black grande">Plataforma digital de participación</h1>
+          <p>Todas las voces y todas las miradas serán escuchadas en este proceso -inédito en la provincia y en el país-, de modo que la futura convención reformadora tenga la mayor legitimidad social posible.</p>
+          {% if user is not empty %}
+            <h3 class="bold"><img src="{{ avatarUrl(user.img_tipo, user.img_hash, 32) }}" class="img-thumbnail" style="margin-right:10px;">{{ user.nombre
+					}}
+              {{ user.apellido }}</h3>
+          {% endif %}
+          <p>Te invitamos a dejar tus opiniones en los 8 ejes principales a contemplarse en el proceso de reforma:</p>
+          {% if user is empty %}
+            <div class="btn-group btn-group-justified btn-group-lg hidden-xs hidden-sm">
+              <a href="{{urlFor('shwLogin')}}" class="btn btn-red">
+                <i class="fa fa-sign-in fa-fw"></i>Iniciar Sesión</a>
+              <a href="{{urlFor('shwCrearUsuario')}}" class="btn btn-default">
+                <i class="fa fa-plus fa-fw"></i>Registrarse</a>
+            </div>
+            <div class="btn-group btn-group-vertical btn-group-lg hidden-md hidden-lg" style="width:100%">
+              <a href="{{urlFor('shwLogin')}}" class="btn btn-red">
+                <i class="fa fa-sign-in fa-fw"></i>Iniciar Sesión</a>
+              <a href="{{urlFor('shwCrearUsuario')}}" class="btn btn-default">
+                <i class="fa fa-plus fa-fw"></i>Registrarse</a>
+            </div>
+          {% endif %}
+        </div>
+        <div class="col-xs-12 col-sm-5">
+          <img src="{{ baseUrl() }}/assets-ref/img/manos-fondo-transp.png" class="img-responsive" style="margin: auto; max-height:320px;" alt="">
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="listadoEjes" style="display:none;">
+    {% for eje in ejes %}
+      <div class="ejeIntro eje{{eje.orden}}">
+        <div class="container">
+          <div class="row">
+            <div class="parent">
+              <div class="col-xs-12 col-md-5 child">
+                <h1 class="grande black blanco" style="margin:0;">
+                  <span style="color:#c40202">0{{eje.orden}}</span><br>{{eje.titulo}}</h1>
+              </div>
+              <div class="col-xs-12 col-md-5 child">
+                <p>{{eje.descripcion}}</p>
+              </div>
+              <div class="col-xs-12 col-md-2 child">
+                <a href="{{urlFor('shwDerecho', {'idDer':eje.id})}}" class="btn btn-large btn-participar">PARTICIPAR</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    {% endfor %}
+  </div>
+{% endblock body %}
+{# -------------------------------------------- #}
+{% block scripts %}
+  <script>
+    $(function () {
+      $('a[href="#derechos"]').click(function () {
+        if (location.pathname.replace(/^\//, '') == this.pathname.replace(/^\//, '') && location.hostname == this.hostname) {
+          var target = $(this.hash);
+          target = target.length ? target : $('[name=' + this.hash.slice(1) + ']');
+          if (target.length) {
+            $('html, body').animate({
+              scrollTop: target.offset().top
+            }, 1000);
+            return false;
+          }
+        }
+      });
+    });
+  </script>
+{% endblock scripts %}
