--- a/views/ref/registro/login-static.twig
+++ b/views/ref/registro/login-static.twig
@@ -1,65 +1,92 @@
-{% set body_style = 'background-color: #ddf3ff;' %} {% extends "ref/master2.twig" %} {# -----------------------------------------------------------
-#} {% block titulo %}Login{% endblock %} {% block body %}
-<div class="registro-panel">
-	<div class="container">
-		<div class="row">
-			<div class="panel-inicio col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 ">
-				<h1 class="black gris ">Entrar</h1>
-				<p>Inicie sesión o <a href="{{urlFor('shwCrearUsuario')}}">registrese</a> para poder participar</p>
-				<div class="well well-lg">
-				<form action="{{ urlFor('runLogin') }}" method="POST" class="form-horizontal">
-					<fieldset>
-						<div class="form-group">
-							<label for="inputEmail" class="col-md-2 control-label">Email</label>
-							<div class="col-md-10">
-								<input name="email" type="email" placeholder="Escriba aquí su email" id="inputEmail" class="form-control" required>
-							</div>
-						</div>
-						<div class="form-group">
-							<label for="inputPassword" class="col-md-2 control-label">Contraseña</label>
-							<div class="col-md-10">
-								<input name="password" type="password" placeholder="Escriba aquí su contraseña" id="inputPassword" class="form-control" required>
-							</div>
-						</div>
-					</fieldset>
-					<button type="submit" class="btn btn-red btn-block">Entrar <i class="mdi mdi-login-variant"></i></button>
-				</form>
+{% set body_style = 'background-color: #ddf3ff;' %}
+{% extends "ref/master2.twig" %}
+{# -----------------------------------------------------------
+#}
+{% block titulo %}Login{% endblock %}
+{% block body %}
+  <div class="registro-panel">
+    <div class="container">
+      <div class="row">
+			<div class="col-md-6 hidden-xs hidden-sm">
+<img src="{{ baseUrl() }}/assets-ref/img/bg2pattern-c.svg" class="img-responsive" alt="">
 			</div>
-				<a href="{{urlFor('shwIndex')}}" class="btn btn-default btn-sm btn-block">Volver</a>
-				<br>
-				<div class="btn-group btn-group-justified">
-					<a href="{{urlFor('shwCrearUsuario')}}" class="btn btn-link">Registrarse</a>
-					<a id="verRecuperar" href="javascript:void(0)" class="btn btn-link">¿Olvido su contraseña?</a>
-				</div>
-			</div>
-			<div class="panel-recuperar col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2" style="display:none;">
-				<h2 class="black gris">Recuperar contraseña</h2>
-				<p>Te enviaremos un link de recuperación por email.<br>Revisá tu casilla y seguí los pasos.</p>
-				<form action="{{ urlFor('runRecuperarClave') }}" method="POST">
-					<div class="form-group">
-						<label for="inputEmail" class="control-label">Email</label>
-						<input name="email" type="email" placeholder="Escriba aquí su email" id="inputEmail" class="form-control" required>
-					</div>
-					<div class="text-center">
-						<button type="submit" class="btn btn-red btn-block">Recuperar mi contraseña</button>
-						<br>
-						<a id="volverInicio" class="btn btn-default btn-sm btn-block" href="javascript:void(0)">Iniciar sesión</a>
-					</div>
-				</form>
-			</div>
-		</div>
-	</div>
-</div>
-{% endblock %} {# ----------------------------------------------------------- #} {% block scripts %}
-<script>
-    $( document ).ready(function() {
-        $( "#volverInicio" ).click(function() {
-          $( ".panel-recuperar" ).hide("slide" );
-          $( ".panel-inicio" ).show("slide" );
-        });
-        $( "#verRecuperar" ).click(function() {
-          $( ".panel-inicio" ).hide("slide" );
-                $( ".panel-recuperar" ).show("slide" );
-        });
+        <div class="panel-inicio col-md-6 col-sm-6 col-sm-offset-3 col-md-offset-0">
+        <div class="hidden-xs hidden-sm">
+          <br>
+          <br>
+          <br>
+          <br>
+        </div>
+          <h1 class="black gris ">Iniciá sesión o registrate</h1>
+          <div class="">
+            <form action="{{ urlFor('runLogin') }}" method="POST" class="form-horizontal">
+              <fieldset>
+                <div class="form-group">
+                  <label for="inputEmail" class="col-md-4 control-label" style="font-size:16px;">Email</label>
+                  <div class="col-md-8">
+                    <input name="email" type="email" placeholder="Escriba aquí su email" id="inputEmail" class="form-control" required="required">
+                  </div>
+                </div>
+                <div class="form-group">
+                  <label for="inputPassword" class="col-md-4 control-label" style="font-size:16px;">Contraseña</label>
+                  <div class="col-md-8">
+                    <input name="password" type="password" placeholder="Escriba aquí su contraseña" id="inputPassword" class="form-control" required="required">
+                  </div>
+                </div>
+              </fieldset>
+              <div class="clearfix">
+                <button type="submit" class="btn btn-red pull-right">
+                  <i class="fa fa-minus fa-fw"></i>Entrar</button>
+              </div>
+            </form>
+          </div>
+          <div class="text-right">
+            <a href="{{urlFor('shwCrearUsuario')}}" class="btn btn-red" style="font-size:14px; font-weight:500;">
+              <i class="fa fa-minus fa-fw"></i>
+              Registrarse</a>
+            <br>
+            <a id="verRecuperar" href="javascript:void(0)" class="btn btn-red" style="font-size:14px; font-weight:500;">
+              <i class="fa fa-minus fa-fw"></i>
+              ¿Olvido su contraseña?</a>
+            <br>
+            <a href="{{urlFor('shwIndex')}}" class="btn btn-red" style="font-size:14px; font-weight:500;">
+              <i class="fa fa-reply fa-fw"></i>
+              Volver</a>
+          </div>
+          <br>
+          <div class="btn-group btn-group-justified"></div>
+        </div>
+<div class="panel-recuperar col-md-6 col-sm-8" style="display:none;">
+          <h2 class="black gris">Recuperar contraseña</h2>
+          <p>Te enviaremos un link de recuperación por email.<br>Revisá tu casilla y seguí los pasos.</p>
+          <form action="{{ urlFor('runRecuperarClave') }}" method="POST">
+            <div class="form-group">
+              <label for="inputEmail" class="control-label">Email</label>
+              <input name="email" type="email" placeholder="Escriba aquí su email" id="inputEmail" class="form-control" required="required">
+            </div>
+            <div class="text-center">
+              <button type="submit" class="btn btn-red btn-block"><i class="fa fa-minus"></i> Recuperar mi contraseña</button>
+              <br>
+<a id="volverInicio" class="btn btn-red" href="javascript:void(0)" style="font-size:14px; font-weight:500;"><i class="fa fa-reply"></i> Volver atras</a>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+{% endblock %}
+{# ----------------------------------------------------------- #}
+{% block scripts %}
+  <script>
+    $(document).ready(function () {
+      $("#volverInicio").click(function () {
+        $(".panel-recuperar").hide("slide");
+        $(".panel-inicio").show("slide");
+      });
+      $("#verRecuperar").click(function () {
+        $(".panel-inicio").hide("slide");
+        $(".panel-recuperar").show("slide");
+      });
     });
-</script> {% endblock %}
+  </script>
+{% endblock %}
