--- a/views/ref/registro/registro.twig
+++ b/views/ref/registro/registro.twig
@@ -8,8 +8,9 @@
         <div class="row">
             <div class="panel-inicio col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 ">
                 <h2 class="black gris">Registrarse</h2>
-                <p>En caso que ya tenga una cuenta, <a href="{{ urlFor('shwLogin') }}"><i class="fa fa-sign-in fa-fw"></i> Inicie Sesión</a></p>
-                <div class="well well-lg">
+                <p>En caso que ya tenga una cuenta, <a href="{{ urlFor('shwLogin') }}" class="force-red"><i class="fa fa-sign-in fa-fw"></i> Inicie Sesión</a></p>
+                <br>
+                <div class="">
                     <form action="{{ urlFor('runCrearUsuario') }}" method="POST" class="form-horizontal" data-toggle="validator">
                         <fieldset>
                             <div class="form-group">
@@ -75,7 +76,7 @@
                             <div class="form-group">
                                 <label for="inputOcupacion" class="col-md-3 control-label">Ocupacion</label>
                                 <div class="col-md-9">
-                                    <select class="form-control" id="inputOcupacion" name="title" data-error="Elija su ocupacion" required>
+                                    <select class="form-control" id="inputOcupacion" name="title" data-error="Elija su ocupación" required>
                                         {% for ocupacion in ocupaciones %}
                                             <option value="{{ ocupacion }}">{{ ocupacion }}</option>
                                         {% endfor %}
@@ -89,9 +90,6 @@
                                      <div class="captcha-cont g-recaptcha" data-size="compact" data-sitekey="6LcF-CYTAAAAAOdQ_mLyGnTl6uqw1FGj7yrpfW_F"></div>
                                 </div>
                             </div>
-                            <div class="form-group">
-                               
-                            </div>
                             <div class="form-group text-justify">
                                 <div class="col-md-12">
                                     Al hacer clic en <b>Registrarse</b>, usted acepta los
@@ -99,11 +97,11 @@
                                 </div>
                             </div>
                         </fieldset>
-                            <button type="submit" class="btn btn-red btn-block">Registrarse <i class="zmdi zmdi-account-add zmdi-hc-lg zmdi-hc-fw"></i></button>
+                            <button type="submit" class="btn btn-red btn-block">Registrarse <i class="fa fa-send"></i></button>
                        
                     </form>
                 </div>
-                            <a href="{{ urlFor('shwPortal') }}" class="btn btn-default btn-sm btn-block">Volver</a>
+                            <a href="{{ urlFor('shwPortal') }}" style="font-size:16px;" class="btn btn-red btn-sm btn-block"><i class="fa fa-reply"></i> Volver</a>
             </div>
         </div>
     </div>
