Corregidos algunas cosas

--- a/views/ref/master2.twig
+++ b/views/ref/master2.twig
@@ -42,8 +42,8 @@ Así, en el caso de la Constitución de Santa Fe, es la norma fundamental de la"
               <span class="sr-only">Toggle navigation</span>
               <i class="fa fa-bars fa-2x"></i>
             </button>
-            <a class="navbar-brand blanco" href="http://basesparalareforma.digital/"><img src="{{ baseUrl() }}/assets-ref/img/sf-ref-logo-grey.svg" class="img-responsive" alt=""></a>
-            <a class="navbar-brand negro" href="http://basesparalareforma.digital/"><img src="{{ baseUrl() }}/assets-ref/img/sf-ref-logo-grey.svg" class="img-responsive" alt=""></a>
+            <a class="navbar-brand blanco" href="http://lareformasantafe.digital/"><img src="{{ baseUrl() }}/assets-ref/img/sf-ref-logo-grey.svg" class="img-responsive" alt=""></a>
+            <a class="navbar-brand negro" href="http://lareformasantafe.digital/"><img src="{{ baseUrl() }}/assets-ref/img/sf-ref-logo-grey.svg" class="img-responsive" alt=""></a>
           </div>
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -85,16 +85,16 @@ Así, en el caso de la Constitución de Santa Fe, es la norma fundamental de la"
   <a href="{{urlFor('shwIndex')}}">ejes</a>
 </li>
 <li class="page-scroll">
-  <a href="http://basesparalareforma.digital/voces-ciudadanas">voces ciudadanas</a>
+  <a href="http://lareformasantafe.digital/voces-ciudadanas">voces ciudadanas</a>
 </li>
 <li class="page-scroll">
-  <a href="http://basesparalareforma.digital/la-reforma">la reforma</a>
+  <a href="http://lareformasantafe.digital/la-reforma">la reforma</a>
 </li>
 <li class="page-scroll">
-  <a href="http://basesparalareforma.digital/noticias">noticias</a>
+  <a href="http://lareformasantafe.digital/noticias">noticias</a>
 </li>
 <li class="page-scroll">
-  <a href="http://basesparalareforma.digital/documentos">documentos</a>
+  <a href="http://lareformasantafe.digital/documentos">documentos</a>
 </li>
             </ul>
           </div>
