--- a/views/ref/misc/error.twig
+++ b/views/ref/misc/error.twig
@@ -17,12 +17,12 @@
 	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ baseUrl() }}/assets-ref/img/favicon/144.png">
 	<meta property="og:title" content="Inicio" />
 	<meta property="og:type" content="webpage" />
-	<meta property="og:url" content="http://basesparalareforma.digital/" />
+	<meta property="og:url" content="http://lareformasantafe.digital/" />
 	<meta property="og:site_name" content="Bases para la Reforma" />
 	<meta property="og:description" content="Nuestra Constitución 
 La Constitución es la ley fundamental de un Estado, la de más alto rango en el ordenamiento político y jurídico, y con la cual deben guardar coherencia el resto de las leyes.
 Así, en el caso de la Constitución de Santa Fe, es la norma fundamental de la" />
-	<meta property="og:image" content="http://basesparalareforma.digital/wp-content/uploads/2016/08/logo2.png" />
+	<meta property="og:image" content="http://lareformasantafe.digital/wp-content/uploads/2016/08/logo2.png" />
 	<title>{% block titulo %}{% endblock titulo %} - Bases para la Reforma</title>
 
 	<!-- Bootstrap -->
@@ -39,7 +39,7 @@ Así, en el caso de la Constitución de Santa Fe, es la norma fundamental de la"
 						<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-						<a class="navbar-brand blanco" href="http://basesparalareforma.digital/"><img src="{{ baseUrl() }}/assets-ref/img/logo.png" class="img-responsive" alt=""></a>
+						<a class="navbar-brand blanco" href="http://lareformasantafe.digital/"><img src="{{ baseUrl() }}/assets-ref/img/logo.png" class="img-responsive" alt=""></a>
 						<a class="navbar-brand negro" href="#page-top"><img src="{{ baseUrl() }}/assets-ref/img/logo2.png" class="img-responsive" alt=""></a>
 					</div>
 					<!-- Collect the nav links, forms, and other content for toggling -->
