--- a/views/ref/registro/registro.twig
+++ b/views/ref/registro/registro.twig
@@ -93,7 +93,7 @@
                             <div class="form-group text-justify">
                                 <div class="col-md-12">
                                     Al hacer clic en <b>Registrarse</b>, usted acepta los
-                                    <a href="http://basesparalareforma.digital/terminos-y-condiciones/"><i class="fa fa-file-text-o fa-fw"></i> Terminos y Condiciones de uso</a>                                    y confirma que ha leído nuestra Política de uso de datos, incluido el uso de cookies.
+                                    <a href="http://lareformasantafe.digital/terminos-y-condiciones/"><i class="fa fa-file-text-o fa-fw"></i> Terminos y Condiciones de uso</a>                                    y confirma que ha leído nuestra Política de uso de datos, incluido el uso de cookies.
                                 </div>
                             </div>
                         </fieldset>
