--- a/views/ref/master.twig
+++ b/views/ref/master.twig
@@ -43,10 +43,10 @@ Así, en el caso de la Constitución de Santa Fe, es la norma fundamental de la"
     {% else %}
       <a href="{{urlFor('shwLogin')}}" class="header-link">participá <i class="fa fa-sign-in fa-fw"></i></a>
     {% endif %}
-<a href="http://basesparalareforma.digital/voces-ciudadanas" class="header-link">voces ciudadanas</a>
-<a href="http://basesparalareforma.digital/la-reforma" class="header-link">la reforma</a>
-    <a href="http://basesparalareforma.digital/noticias" class="header-link">noticias</a>
-    <a href="http://basesparalareforma.digital/documentos" class="header-link">documentos</a>
+<a href="http://lareformasantafe.digital/voces-ciudadanas" class="header-link">voces ciudadanas</a>
+<a href="http://lareformasantafe.digital/la-reforma" class="header-link">la reforma</a>
+    <a href="http://lareformasantafe.digital/noticias" class="header-link">noticias</a>
+    <a href="http://lareformasantafe.digital/documentos" class="header-link">documentos</a>
 {% if user and (user.es_moderador == 1) %}
 <a href="{{urlFor('shwIndexAdmin')}}" class="header-link">
       <i class="fa fa-cog fa-lg fa-fw"></i>
@@ -63,8 +63,8 @@ Así, en el caso de la Constitución de Santa Fe, es la norma fundamental de la"
                 <span class="sr-only">Toggle navigation</span>
                 <i class="fa fa-bars fa-2x"></i>
               </button>
-              <a class="navbar-brand blanco" href="http://basesparalareforma.digital/"><img src="{{ baseUrl() }}/assets-ref/img/sf-ref-logo.svg" class="img-responsive" alt=""></a>
-              <a class="navbar-brand negro" href="http://basesparalareforma.digital/"><img src="{{ baseUrl() }}/assets-ref/img/sf-ref-logo.svg" class="img-responsive" alt=""></a>
+              <a class="navbar-brand blanco" href="http://lareformasantafe.digital/"><img src="{{ baseUrl() }}/assets-ref/img/sf-ref-logo.svg" class="img-responsive" alt=""></a>
+              <a class="navbar-brand negro" href="http://lareformasantafe.digital/"><img src="{{ baseUrl() }}/assets-ref/img/sf-ref-logo.svg" class="img-responsive" alt=""></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -106,16 +106,16 @@ Así, en el caso de la Constitución de Santa Fe, es la norma fundamental de la"
   <a href="{{urlFor('shwIndex')}}">ejes</a>
 </li>
 <li class="page-scroll">
-<a href="http://basesparalareforma.digital/voces-ciudadanas">voces ciudadanas</a>
+<a href="http://lareformasantafe.digital/voces-ciudadanas">voces ciudadanas</a>
 </li>
 <li class="page-scroll">
-  <a href="http://basesparalareforma.digital/la-reforma">la reforma</a>
+  <a href="http://lareformasantafe.digital/la-reforma">la reforma</a>
 </li>
 <li class="page-scroll">
-  <a href="http://basesparalareforma.digital/noticias">noticias</a>
+  <a href="http://lareformasantafe.digital/noticias">noticias</a>
 </li>
 <li class="page-scroll">
-  <a href="http://basesparalareforma.digital/documentos">documentos</a>
+  <a href="http://lareformasantafe.digital/documentos">documentos</a>
 </li>
               </ul>
 
